kubernetes/apps/app-cluster/productivity/affine/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: affine
  namespace: productivity
  annotations:
    external-dns.alpha.kubernetes.io/hostname: notes.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "Notes and collaborative whiteboard"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - productivity"
    gethomepage.dev/href: "https://notes.krapulax.dev"
    gethomepage.dev/icon: "affine.png"
    gethomepage.dev/name: "AFFiNE"
    gethomepage.dev/weight: "20"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - notes.krapulax.dev
  rules:
    - backendRefs:
        - name: affine-app
          namespace: productivity
          port: 80
